--- a/vars/main.yaml
+++ b/vars/main.yaml
@@ -1,5 +1,5 @@
 ---
-app_platform: '{{ app_os }}_{{ app_arch }}'
+app_platform: '{{ app_os | replace("linux","Linux") }}_{{ app_arch }}'
 app_name: '{{ bin_name }}_{{ app_ver }}_{{ app_platform }}'
 app_archive: '{{ app_name }}.{{ app_archive_suffix | default("tar.gz") }}'
 app_url: '{{ app_mirror }}/v{{ app_ver }}/{{ app_archive }}'
@@ -7,7 +7,7 @@ app_binary_dir: '{{ app_install_dir }}/{{ app_name }}'
 app_install_exe: '{{ app_binary_dir }}/{{ bin_name }}'
 app_install_link: '{{ app_install_dir }}/{{ bin_name }}'
 app_mirror: 'https://github.com/{{ namespace }}/{{ repo }}/releases/download'
-app_checksums_url: '{{ app_mirror }}/v{{ app_ver }}/{{ repo }}_{{ app_ver}}_checksums.txt'
+app_checksums_url: '{{ app_mirror }}/v{{ app_ver }}/checksums.txt'
 app_checksum: |-
   {% if app_use_online_checksum %}
   sha256:{{ app_checksums_url }}
