--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ name: CI
 
 defaults:
   run:
-    working-directory: 'nicholaswilde.helm-docs'
+    working-directory: 'nicholaswilde.helm_docs'
 
 jobs:
 
@@ -21,7 +21,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'nicholaswilde.helm-docs'
+          path: 'nicholaswilde.helm_docs'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
@@ -52,7 +52,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: 'nicholaswilde.helm-docs'
+          path: 'nicholaswilde.helm_docs'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v2
